# parallax

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: build-images.yaml  build-spark-image.yaml  ci.yml  commit-check.yaml  pre-commit.yml
docker/: Dockerfile  Dockerfile.blackwell  Dockerfile.hopper  Dockerfile.spark
docs/: CONTRIBUTING.md
docs/images/: qwen.avif
docs/user_guide/: install.md  quick_start.md  work_with_openclaw.md
examples/two_mac_tiny_model/: mac_first_peer.py
scripts/: README.md  check.sh  download_model_shard.sh  download_shard.py  generate.py  join.sh  launch.sh  signlerun.sh  start.sh  test.sh
src/backend/: main.py
src/backend/benchmark/: backend_request_func.py  benchmark_serving.py
src/backend/server/: constants.py  request_handler.py  rpc_connection_handler.py  scheduler_manage.py  server_args.py  static_config.py
src/backend/utils/: logging_config.py
src/common/: request_metrics.py  static_config.py  version_check.py
src/frontend/: .gitignore  README.md  chat.html  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/frontend/src/: App.tsx  chat.tsx  global.css  main.tsx
src/frontend/src/apis/: data.ts  index.ts
src/frontend/src/hooks/: index.ts  use-callback.ts  use-const.ts
src/frontend/src/pages/: chat.tsx  join.tsx  setup.tsx
src/frontend/src/router/: chat.tsx  index.tsx  main.tsx
src/frontend/src/services/: api.ts  chat-helper.tsx  chat.tsx  cluster.tsx  host.tsx  http-common.ts  http-stream.ts  index.ts  temp.chat.101301.json
src/frontend/src/themes/: index.tsx  palette.ts  shadows.ts  typography.ts
src/parallax/: cli.py  launch.py  launch_chat.py
src/parallax/metal/indexer/: kernel.py  q_dot_k.metal  store_key.metal
src/parallax/metal/paged_attention/: kernel.py  paged_attention.metal  paged_attention_deepseek_v32.metal  paged_attention_gpt_oss.metal  paged_attention_kernel.metal  reshape_and_cache.metal
src/parallax/models/: attention.py  deepseek_v2.py  deepseek_v3.py  deepseek_v32.py  glm4_moe.py  glm4_moe_lite.py  gpt_oss.py  kimi_k2.py  kimi_vl.py  llama.py  minimax.py  qwen2.py  qwen3.py  qwen3_moe.py  qwen3_next.py  qwen3_vl.py  step3p5.py
src/parallax/p2p/: message_util.py  server.py  utils.py
src/parallax/p2p/proto/: forward.proto  forward_pb2.py
src/parallax/scheduling/: layer_allocation.py  model_info.py  node.py  request_routing.py  scheduler.py
src/parallax/server/: block_radix_cache.py  cache_manager.py  executor.py  http_server.py  kv_cache.py  metrics.py  model.py  node_chat_http_server.py  paged_kv_cache.py  radix_cache.py  request.py  scheduler.py  server.py  server_args.py  server_info.py  shard_loader.py
src/parallax/server/cache/: allocator.py  base.py  dsa_cache.py  kv_cache.py  linear_cache.py
src/parallax/server/executor/: base_executor.py  factory.py  mlx_executor.py  sglang_executor.py  vllm_executor.py
src/parallax/server/sampling/: sampler.py  sampling_params.py
src/parallax/sglang/: batch_info.py  model_runner.py  monkey_patch.py  multimodal_utils.py
src/parallax/utils/: config_utils.py  prefix_cache_utils.py  selective_download.py  shared_state.py  tokenizer_utils.py  utils.py  vlm_utils.py  weight_filter_utils.py  weight_refit_utils.py
src/parallax/vllm/: batch_info.py  model_runner.py  monkey_patch.py
src/parallax_extensions/: CMakelists.txt  README.md  bindings.cpp  ops.py  setup.py
src/parallax_extensions/kernels/: paged_attention.cpp  paged_attention.h  paged_attention.metal  reshape_and_cache.cpp  reshape_and_cache.h  reshape_and_cache.metal  utils.cpp  utils.h  utils.metal
src/parallax_extensions/lib/: libparallax_ext.dylib
src/parallax_utils/: ascii_anime.py  file_util.py  logging_config.py  prepare_adapter.py  utils.py
src/parallax_utils/anime/: parallax_join.json  parallax_run.json
src/router/: lb_strategy.py  main.py
src/router/ui/: endpoints.html
src/scheduling/: README.md  layer_allocation.py  model_info.py  node.py  node_management.py  request_routing.py  scheduler.py
src/server/: model.py  request.py  server_info.py  shard_loader.py
tests/: conftest.py  test_batch_scheduler.py  test_executor.py  test_http_handler.py  test_kv_cache.py  test_layer_allocation.py  test_message_util.py  test_model.py  test_model_cuda.py  test_model_loader.py  test_paged_attention.py  test_paged_kv_integration.py  test_prefix_cache.py  test_request_routing.py  test_sampler.py  test_scheduler.py  test_server_args.py  test_shard_loader.py  test_tool_call.py  test_utils.py
tests/parallax_extensions_tests/: test_kv_cache_integration.py  test_paged_attention_v1.py
tests/scheduler_tests/: test_layer_allocation.py  test_node_management.py  test_request_routing.py  test_scheduler.py  test_utils.py
(+71 files in other folders)
